XMLHTTPRequest POSTs to a custom WKURLSchemeHandler protocol are missing the HTTP body. https://bugs.webkit.org/show_bug.cgi?id=191362

Reviewed by Alex Christensen.

Source/WebCore:

Covered by new API tests.

In 2008 some refactoring added an HTTP(S)-only restriction to copying the form body for
XHRs that POST, and it added that restriction with no explanation.

We definitely want to allow that.

Blobs are broken at this time (covered by bug 197237)

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::send):
(WebCore::XMLHttpRequest::sendBytesData):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WKURLSchemeHandler-1.mm: Add a test that POSTs all sorts of things
  from an XHR to a custom protocol.


Canonical link: https://commits.webkit.org/211468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244617 268f45cc-cd09-0410-ab3c-d52691b4dbfc